# iAn

./: .gitignore  README.md  ideal-sw.txt
cli_template/: CMakeLists.txt  CMakeSettings.json  README.md  build.bat
cli_template/common/: cli_base.cpp  cli_base.h
cli_template/tool1/: main.cpp
cli_template/tool2/: main.cpp
my_cli_tools/: CMakeLists.txt
my_cli_tools/inc/: cli_parser.h
my_cli_tools/src/: cli_parser.cpp  main.cpp
my_tools/: CMakeLists.txt
my_tools/tool1/: CMakeLists.txt  main.cpp
my_tools/tool2/: CMakeLists.txt  main.cpp
say_hello/: CMakeLists.txt
say_hello/inc/: hello.h
say_hello/src/: hello.cpp  main.cpp
